# Projekt-leki-implementacja-listy

./: Agnieszka Góral - Sprawozdanie - Leki.docx
leki/: CMakeLists.txt  Medicines.txt  Symptoms.txt  funkcje_pomocnicze.cpp  funkcje_pomocnicze.h  klasa_testowa.cpp  klasa_testowa.h  konsola.cpp  konsola.h  linked_list.cpp  linked_list.h  main.cpp  medicine.cpp  medicine.h  symptom.cpp  symptom.h
